MAPD-828 - Fix z-index issue with site header dropdown over the modals

--- a/frontend/map/styles/common.styl
+++ b/frontend/map/styles/common.styl
@@ -72,7 +72,6 @@ header.site-header, mobile-header
   left 0
   top 0
   right 0
-  z-index 4
   height 50px
   background $dark_blue
 
